# M_VINS

./: README.md  euroc2rosbag2.py
camera_model/: CMakeLists.txt  package.xml
camera_model/src/camera_model/: pinhole_camera.cpp  pinhole_camera.h
estimator/: CMakeLists.txt  package.xml
estimator/launch/: estimator.launch
estimator/src/: estimator_node.cpp
estimator/src/estimators/: commons.cpp  commons.h  feature_manager.cpp  feature_manager.h  imu_factor.cpp  imu_factor.h  initial_alignment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  integration.cpp  integration.h  marginalization_factor.cpp  marginalization_factor.h  pose_parameterization.cpp  pose_parameterization.h  projection_factor.cpp  projection_factor.h  sw_estimator.cpp  sw_estimator.h
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/config/: euroc.yaml
feature_tracker/launch/: feature_tracker.launch  feature_tracker_launch.py
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp
feature_tracker/src/kl_tracker/: feature_tracker.cpp  feature_tracker.h  pinhole_camera.cpp  pinhole_camera.h
odom_recorder/: CMakeLists.txt  package.xml
odom_recorder/launch/: odom_recorder_launch.py  start.launch
odom_recorder/src/: odom_recorder_node.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/config/: euroc.yaml
pose_graph/launch/: pose_graph.launch
pose_graph/src/: pose_graph_node.cpp
pose_graph/src/pose_graph/: commons.cpp  commons.h  key_frame.cpp  key_frame.h  pose_graph_4dof.cpp  pose_graph_4dof.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/config/: euroc.yaml
vins_estimator/launch/: vins_estimator.launch  vins_estimator_launch.py
vins_estimator/src/: vins_estimator_node.cpp
vins_estimator/src/estimator/: commons.cpp  commons.h  feature_manager.cpp  feature_manager.h  initial_alignment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  integration.cpp  integration.h  sw_estimator.cpp  sw_estimator.h
vins_estimator/src/estimator/factors/: imu_factor.cpp  imu_factor.h  marginalization_factor.h  pose_parameterization.cpp  pose_parameterization.h  projection_factor.cpp  projection_factor.h
